Made search bar responsive

--- a/client/views/home/donor/_donor.sass
+++ b/client/views/home/donor/_donor.sass
@@ -15,3 +15,16 @@
   background-color: #f1f1f1
   border-left: 2px solid #a8a8a8
 
+@media screen and (max-width: 940px)
+  .donor-view-container 
+    flex-wrap: wrap
+
+  .matches-view-container
+    order: 2
+
+  .search-bar-view-container
+    padding-top: 0
+    padding-bottom: 0
+    order: 1
+    border-bottom: 2px solid #a8a8a8
+    border-left: none
