--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -88,3 +88,59 @@
 
 .search-bar-checkbox-container-inclusion
   border-left: 4px solid #4fc1e9
+
+
+@media screen and (max-width: 940px)
+  .search-bar-category-header
+    width: 150px
+
+  .search-bar-welcome-message
+    display: none
+  
+  .filter-main-actions-container
+    display: flex
+    flex-direction: row
+    align-items: center
+
+  .filter-main-sub-container
+    display: flex
+    flex-direction: row
+    justify-content: flex-start
+
+  .button-searchbar-action-container
+    width: 100px
+    margin: 0 10px
+    padding: 5px 0
+
+  .search-container
+    display: flex
+    flex-direction: row
+    align-items: center
+  
+  .search-sub-container
+    display: flex
+    flex-direction: row
+    justify-content: flex-start
+    align-items: center
+  
+  .search-bar-input-field
+    margin: 5px 10px
+  
+  .search-error-message
+    margin: 5px 10px
+  
+  .filter-container
+    display: flex
+    flex-direction: row
+    align-items: center
+    border-bottom: none
+  
+  .checkboxes-container
+    display: flex
+    flex-direction: row
+    justify-content: flex-start
+    align-items: center
+    flex-wrap: wrap
+
+  .search-bar-checkbox-container
+    margin: 5px 10px
