Made Messaging view more responsive

--- a/client/components/message-history-item/_message-history-item.sass
+++ b/client/components/message-history-item/_message-history-item.sass
@@ -6,7 +6,7 @@
   flex-direction: row
   justify-content: space-between
   height: 50px
-
+  
 .message-history-item-container:hover
   background-color:  #f1f1f1
 
@@ -39,3 +39,9 @@
   font-size: 12px
   border-radius: 20px
   text-align: center
+
+@media screen and (max-width: 780px)
+  .message-history-item-container
+    height: 30px
+  .message-history-item-text
+    display: none
