--- a/client/views/messaging/message-history/_message-history.sass
+++ b/client/views/messaging/message-history/_message-history.sass
@@ -10,6 +10,7 @@
 .messaging-history-header
   font-size: 18px
   margin: 20px
+  text-align: center
 
 .message-history-list-container
   overflow-y: auto
