--- a/client/components/message/_message.sass
+++ b/client/components/message/_message.sass
@@ -20,6 +20,7 @@
   border-radius: 10px
   padding: 10px 10px
   width: 70%
+  overflow-wrap: break-word
 
 .message-from
   align-self: flex-end
@@ -29,3 +30,7 @@
   align-self: flex-start
   background-color: white
   border: 2px solid #e1e9ee
+
+@media screen and (max-width: 780px)
+  .message-container
+    margin: 3px 0
