--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -12,6 +12,7 @@
 
 .messaging-top-message
   padding: 0 10px
+  text-align: center
 
 .messaging-container
   display: flex
@@ -20,7 +21,7 @@
   padding: 20px 0
 
 .messaging-thread-container
-  flex-grow: 3
+  flex-grow: 4
   max-width: 600px
   overflow-y: auto
   background-color: white
