Made Modal Component responsive

--- a/client/components/modal/_modal.sass
+++ b/client/components/modal/_modal.sass
@@ -15,7 +15,7 @@
   width: 600px
   background-color: white
   margin-top: -300px
-  margin-left: -250px
+  margin-left: -300px
 
 .modal-close-button-container
   float: right
@@ -28,3 +28,10 @@
 .modal-close-button:hover
   background-color: #152933
   color: #32c9dc
+
+@media screen and (max-width: 650px)
+  .modal-container
+    height: 500px
+    width: 80%
+    margin-top: -300px
+    margin-left: -40%
